--- a/public/template/gisclient/index.html
+++ b/public/template/gisclient/index.html
@@ -18,7 +18,7 @@ window.addEvent('domready', function() {
 	'bottom':0,
 	'top':35,
 	'resultWin':false,
-	'cleanForm':true,
+	'cleanForm':false,
 	'minWidth':800,
 	'minHeight':600,
 	'zoomstep': 2,
