--- a/public/template/gisclient/index.html
+++ b/public/template/gisclient/index.html
@@ -18,7 +18,7 @@ window.addEvent('domready', function() {
 	'bottom':0,
 	'top':35,
 	'resultWin':false,
-	'cleanForm':true,
+	'cleanForm':false,
 	'minWidth':800,
 	'minHeight':600,
 	'zoomstep': 2,
@@ -66,7 +66,7 @@ window.addEvent('domready', function() {
 				<span id="gisclient_mapset_title" style="text-align:right;top:10px">Avvio della mappa....</span>
 			</div>
 			<div style="float:right;margin-top:10px;font-size:22px">
-				<b style="color:#FF8000">GisClient <small>2.1</small></b>&nbsp;&nbsp;
+				<b style="color:#FF8000">GisClient <small>2.2</small> </b>&nbsp;&nbsp;
 			</div>
 	</div>
 <!-- Fine dell'intestazione-->
